# Telescope

./: .gitignore  Cargo.toml  Design.md  README.md  rustfmt.toml
docs/: telescope.service
src/: apis.rs  log_utils.rs  main.rs  platform.rs  subscription.rs  watcher.rs  watchers.rs
src/apis/: bilibili.rs  cookies.rs  twitter.rs
src/handlers/: callback.rs  command.rs
src/watchers/: twitter_space.rs
