[package]
name = "telescope"
version = "0.1.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.41.0", features = ["rt-multi-thread", "macros"] }
dptree = "0.3.0"
url = "2.5.2"
regex = "1.11.1"
strum = "0.26.3"
strum_macros = "0.26.4"
lazy_static = "1.5.0"
redis = { version = "0.27.5", features = ["aio", "tokio-comp"] }
futures = "0.3.31"
