[package]
name = "telescope"
version = "0.2.1"
edition = "2021"

[dependencies]
teloxide = { version = "0.13", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.42", features = ["rt-multi-thread", "macros"] }
dptree = "0.3"
url = "2.5"
regex = "1.11"
strum = "0.27"
strum_macros = "0.27"
lazy_static = "1.5"
redis = { version = "0.29", features = ["aio", "tokio-comp"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["cookies", "json"] }
chrono = { version = "0.4", features = ["now"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
